# LC_10

./: 1_EDA.ipynb  2_preprocess.ipynb  3_unsupervised_analysis.ipynb  4_modeling.ipynb  README.md  main.py  pyproject.toml
beyond/: 4_bis_modeling.ipynb  4_ter_modeling.ipynb
data/processed/: dbscan_cluster_purity_modeling.csv  kmeans_cluster_purity_cluster_cnn_modeling.csv  kmeans_cluster_purity_modeling.csv  kmeans_cluster_purity_scratch_cnn_modeling.csv  kmeans_selected_clusters_cluster_cnn_modeling.csv  kmeans_selected_clusters_modeling.csv  metadata.csv  modeling_cv_results.csv  modeling_cv_results_cluster_cnn_selective.csv  modeling_cv_results_scratch_cnn_selective.csv  modeling_cv_results_selective.csv  modeling_cv_summary_cluster_cnn_selective.csv  modeling_cv_summary_scratch_cnn_selective.csv  modeling_metrics.csv  modeling_metrics_50_50.csv  modeling_metrics_cluster_cnn_selective.csv  modeling_metrics_scratch_cnn_selective.csv  modeling_metrics_selective.csv  pseudo_labels_dbscan_cluster_cnn_selective.csv  pseudo_labels_dbscan_selective.csv  resnet18_features.npy  resnet18_features_scaled.npy  selective_semi_supervised_grid_compact.csv  selective_semi_supervised_grid_compact_summary.csv  semi_supervised_training_set_dbscan_cluster_cnn_selective.csv
data/processed/beyond/: dbscan_selected_clusters_cnn_modeling.csv  modeling_cv_results_cnn_selective.csv  modeling_cv_summary_cnn_selective.csv  modeling_metrics_cnn_selective.csv  pseudo_labels_dbscan_cnn_selective.csv  (+3 more)
data/raw/: Jeu de Données d'Images Cérébrales pour la Détection de Tumeurs.txt
