[project]
name = "lc-10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]
